[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scripts/StartButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scripts/Start2PButton.gd" type="Script" id=3]
[ext_resource path="res://ScoresButton.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/techno_hideo_bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Scripts/Title.gd" type="Script" id=6]
[ext_resource path="res://Assets/Scripts/Copyright.gd" type="Script" id=7]
[ext_resource path="res://Assets/Scripts/ControlsLabel.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sound/Metre_-_09_-_Space_Probe.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.486157 )

[node name="Root" type="Spatial"]
script = ExtResource( 1 )

[node name="Menu" type="Container" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="StartButton" type="Button" parent="Menu"]
margin_left = 449.0
margin_top = 280.0
margin_right = 600.0
margin_bottom = 320.0
text = "1 Player"
script = ExtResource( 2 )

[node name="Start2PButton" type="Button" parent="Menu"]
margin_left = 449.0
margin_top = 330.0
margin_right = 600.0
margin_bottom = 370.0
text = "2 Players"
script = ExtResource( 3 )

[node name="ScoresButton" type="Button" parent="Menu"]
margin_left = 449.0
margin_top = 380.0
margin_right = 600.0
margin_bottom = 420.0
text = "High Scores"
script = ExtResource( 4 )

[node name="Title" type="Label" parent="Menu"]
margin_left = 102.0
margin_top = 69.0
margin_right = 947.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.296875, 1, 1 )
custom_constants/shadow_offset_x = 6
text = "Starship Panic"
script = ExtResource( 6 )

[node name="Copyright" type="RichTextLabel" parent="Menu"]
margin_left = 2.0
margin_top = 562.0
margin_right = 1024.0
margin_bottom = 602.0
text = "Dia Criativo. Premium Minds 2018"
scroll_active = false
script = ExtResource( 7 )

[node name="ControlsLabel" type="RichTextLabel" parent="Menu"]
margin_left = 446.0
margin_top = 441.0
margin_right = 619.0
margin_bottom = 580.0
bbcode_enabled = true
bbcode_text = "Controls P1:
<Tab> Shield
<Space> Laser
<J - L> Move Left/Right

Controls P2:
<PgDwn> Shield
<PgUp> Laser
<4 - 6> Move Left / Right"
text = "Controls P1:
<Tab> Shield
<Space> Laser
<J - L> Move Left/Right

Controls P2:
<PgDwn> Shield
<PgUp> Laser
<4 - 6> Move Left / Right"
script = ExtResource( 8 )

[node name="TransitionPanel" type="PanelContainer" parent="Menu"]
visible = false
margin_right = 1025.0
margin_bottom = 603.0
custom_styles/panel = SubResource( 2 )

[node name="Music" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
autoplay = true
[connection signal="pressed" from="Menu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Menu/Start2PButton" to="." method="_on_Start2PButton_pressed"]
[connection signal="pressed" from="Menu/ScoresButton" to="." method="_on_ScoresButton_pressed"]
